# TESTER

./: .coverage  .dockerignore  .env  .env.example  .firebaserc  .gitignore  CHANGELOG.md  DEPLOY.md  DEV_log.md  Dockerfile  Dockerfile.sandbox  GCP_IAM_GUIDE.md  LICENSE  PRIVACY_POLICY.md  README.md  SECURITY_REPORT.md  deploy.sh  docker-compose.yml  firebase.json  prometheus.yml  pyproject.toml  requirements.txt  run.py
backend/: .coverage  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_server.sh
backend/db/: rls_policies.sql
backend/scripts/: benchmark_history_cache.py  benchmark_json_optimization.py  benchmark_sse_bytes.py  measure_serialization.py  test_orjson.py
backend/src/: auth.py  exceptions.py  main.py  types.py
backend/src/api/: 00_API_GUIDE.md  routers.py
backend/src/config/: constants.py  messages.py  settings.py
backend/src/db/: migration_kofi_fixes.sql  migration_remove_ad_columns.sql  schema.sql  token_schema.sql
backend/src/languages/: 00_LANGUAGE_STRATEGY_GUIDE.md  base.py  factory.py  java.py  javascript.py  python.py
backend/src/repositories/: base_repository.py  generation_repository.py  test_log_repository.py
backend/src/services/: 00_SERVICE_GUIDE.md  cache_service.py  execution_service.py  gemini_service.py  supabase_service.py  test_generator_service.py  token_service.py
backend/tests/: 00_TEST_GUIDE.md  auto_evaluator.py  conftest.py  test_execution_benchmark.py  test_fastapi_backend.py  test_gemini.py  test_security_hardening.py  verify_reflection_effect.py
(+132 files in other folders)
