[project]
name = "tester-backend"
version = "0.1.0"
description = "AI-Powered Test Code Generator Backend"
authors = [
    {name = "sonsungjun",email = "sjson666@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.128.7,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "slowapi (==0.1.9)",
    "google-auth (>=2.48.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
    "docker (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.0.0)",
    "pytest-asyncio (==0.23.5)",
    "pytest-mock (==3.12.0)",
    "pytest-cov (==4.1.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
